# comicpy

./: .gitignore  README.md  build_release.sh  pyproject.toml  requirements.txt  run_env_tests.sh  run_tests.sh
.github/workflows/: build.yml
comicpy/: __init__.py  __main__.py  checkfile.py  cli.py  comicpy.py  comicpycontroller.py  exceptionsClasses.py  filesigns.py  models.py  pdftocbz_BKP.py  testing_pdftocbz.py  utils.py  valid_extensions.py  valid_extentions.py  version.py
comicpy/bin_rar/: version_rar.txt
comicpy/handlers/: __init__.py  baseziprar.py  directoryhandler.py  imageshandler.py  pdfhandler.py  pdfhandler_thread.py  rarhandler.py  ziphandler.py
rar/: default.sfx  rar.txt  whatsnew.txt
tests/: test_Base.py  test_ComicPy.py
tests/bin_rar/: unrar
tests/files/: cbr_comic.rar  empty.rar  image_dir_1.rar  image_dir_2.rar  image_dir_2_protected.rar  no_image.rar
tests/files/rars/: image_dir_2_1.rar  image_dir_2_2.rar
